--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -38,10 +38,8 @@ services:
     ports:
       - "3306"
 
-    command: --init-file /data/application/init.sql
-
     volumes:
-      - ./sql/init.sql:/data/application/init.sql
+      - ./sql/init.sql:/docker-entrypoint-initdb.d/init.sql
 
 volumes:
   testdb:
