--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -14,11 +14,11 @@ spring.jpa.hibernate.ddl-auto = update
 ## MySQL
 
 # Connection URL
-spring.datasource.url=jdbc:mysql://mysql_service:3306/testdb
+#spring.datasource.url=jdbc:mysql://test:3306/testdb
 
 # Credentials
 spring.datasource.username=root
 spring.datasource.password=root
 
 ## External Hospital service
-hospital.client.url=http://123.123.123.123:8081/cities/%s/hospitals
+hospital.client.url=http://localhost:8089/cities/%s/hospitals
