--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,14 @@
 		<java.version>1.8</java.version>
 		<spring-cloud.version>Hoxton.RELEASE</spring-cloud.version>
 		<spring-cloud-contract.version>2.0.2.RELEASE</spring-cloud-contract.version>
+		<mysql.version>8.0.18</mysql.version>
+		<testcontainers-mysql.version>1.12.4</testcontainers-mysql.version>
+		<wiremock.version>2.25.1</wiremock.version>
+		<h2.version>1.4.194</h2.version>
 	</properties>
 
 	<dependencies>
+		<!-- Spring -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -33,14 +38,14 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<!-- Database -->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>8.0.18</version>
+			<version>${mysql.version}</version>
 		</dependency>
 
-
+		<!-- Testing -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -52,26 +57,26 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.testcontainers/mysql -->
 		<dependency>
 			<groupId>org.testcontainers</groupId>
 			<artifactId>mysql</artifactId>
-			<version>1.12.4</version>
+			<version>${testcontainers-mysql.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.github.tomakehurst</groupId>
 			<artifactId>wiremock-jre8</artifactId>
-			<version>2.25.1</version>
+			<version>${wiremock.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>test</scope>
-			<version>1.4.194</version>
+			<version>${h2.version}</version>
 		</dependency>
 
+		<!-- Contract testing -->
 		<!-- Add this dependency to generate spring cloud contract tests based on a contract -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -110,7 +115,7 @@
 				<version>${spring-cloud-contract.version}</version>
 				<extensions>true</extensions>
 				<configuration>
-					<baseClassForTests>com.xpadro.testingwebapp.BaseContractTestClass</baseClassForTests>
+					<baseClassForTests>com.xpadro.testingwebapp.contract.BaseContractTestClass</baseClassForTests>
 				</configuration>
 			</plugin>
 		</plugins>
